vlib/v/checker/tests/for_c_stmt_with_result_propagation.out
vlib/v/checker/tests/for_c_stmt_with_result_propagation.vv:8:24: error: propagating errors in `for statement increment` is not allowed (yet)
    6 |     mut pos := 0
    7 | 
    8 |     for ; pos > 10; pos = foo()! {
      |                           ~~~~~
    9 |         println(pos)
   10 |     }
