vlib/v/checker/tests/for_c_stmt_with_result_propagation.vv
fn foo() !int {
	return 5
}

fn main() {
	mut pos := 0

	for ; pos > 10; pos = foo()! {
		println(pos)
	}
}
